# HUSK

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
husk/: __init__.py  cli.py  config.py  crawler.py  graph.py  history.py  parser.py
husk/ai/: __init__.py  adapters.py  cache.py  estimator.py  rag.py  summarizer.py
tests/: test_husk.py
