[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "husk"
version = "0.1.0"
description = "A local-first CLI engine for legacy codebases"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "tree-sitter>=0.21.3",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "networkx>=3.0",
    "gitpython>=3.1.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "certifi>=2023.7.22",
]

[project.scripts]
husk = "husk.cli:main"
